--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,10 +12,10 @@ pool:
 steps:
 - task: NodeTool@0
   inputs:
-    versionSpec: '20.x'
+    versionSpec: '10.x'
   displayName: 'Install Node.js'
 
 - script: |
-    npm install -g env-cmd 
+    npm install
     npm run build
   displayName: 'npm install and build'
